board colors, observer tests